--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,18 @@ header>h1 {
     font-weight: bold;
     font-size: 24px;
 }
+
+.green-glow {
+    border: 4px solid #25ba31;
+    box-shadow: 0 0 10px #1c7022;
+}
+
+.red-glow {
+    border: 4px solid #cc0a0a;
+    box-shadow: 0 0 10px #8e0707;
+}
+
+.grey-glow {
+    border: 4px solid #827575;
+    box-shadow: 0 0 10px #605959;
+}
